expense responsive table

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ash_sq.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ash</title>
+    <style>
+      #root {
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
